@@ -4,25 +4,27 @@ import dat.config.HibernateConfig;
 import dat.entities.Game;
 import dat.entities.UserAccount;
 import dat.enums.Genre;
-import dat.enums.Languages;
 import dat.enums.Roles;
 import org.hibernate.Session;
 import org.hibernate.SessionFactory;
 import org.hibernate.Transaction;
 
+import java.sql.SQLOutput;
+import java.util.Collections;
+import java.util.EnumSet;
 import java.util.List;
 import java.util.Set;
 
 public class TestPopulator {
     public static void populate() {
-        // Hent SessionFactory fra Hibernate-konfigurationen (f.eks. via HibernateConfig)
+
         SessionFactory sessionFactory = HibernateConfig.getEntityManagerFactory().unwrap(SessionFactory.class);
-        // Åbn en ny Hibernate-session og start transaktion
         Session session = sessionFactory.openSession();
         Transaction tx = null;
+
         try {
             tx = session.beginTransaction();
-
+            System.out.println(">>> POPULATOR: starting");
             // Opret testbrugere
             UserAccount user1 = new UserAccount("testuser", "password123");
             user1.addRole(Roles.USER);
@@ -30,32 +32,40 @@ public class TestPopulator {
             adminUser.addRole(Roles.ADMIN);
             adminUser.addRole(Roles.USER);
 
+            Set<Genre> genres = EnumSet.of(Genre.RACING, Genre.CIVILIZATION);
+
             // Opret test-spil (Game) med nødvendige felter
-            Game game1 = new Game(
-                    "Skak",
-                    "Klassisk strategispil for to spillere",
-                    2, 2,               // min og max antal spillere
-                    6, 99,              // aldersgruppe min og max
-                    1475,               // udgivelsesår (skak estimeret opfundet år)
-                    // Sæt af sprog og genre for spillet
-                    List.of(Languages.ENGLISH, Languages.DANISH),
-                    Set.of(Genre.ABSTRACT_STRATEGY, Genre.STRATEGY)  // **Genre.STRATEGY antages at eksistere eller brug en passende genre**
+            Game game = new Game(
+                    "Catan",
+                    "Trade, build, and settle.",
+                    10,                // minAge
+                    3,                 // minNoOfPlayers
+                    4,                 // maxNoOfPlayers
+                    1995,              // releaseYear
+                    "https://example.com/catan.jpg",        // imageURL
+                    "https://example.com/catan-thumb.jpg",  // thumbnailURL
+                    Collections.emptySet(),
+                    genres
             );
             Game game2 = new Game(
                     "Matador",
                     "Klassisk økonomi/handel brætspil for hele familien",
-                    2, 6,
-                    8, 99,
+                    2,
+                    4,
+                    6,
                     1935,               // udgivelsesår for Matador/Monopoly
-                    List.of(Languages.DANISH, Languages.ENGLISH),
-                    Set.of(Genre.ECONOMIC, Genre.FAMILY)           // **Genre.FAMILY antages at eksistere eller vælg passende kategori**
+                    "https://example.com/catan.jpg",        // imageURL
+                    "https://example.com/catan-thumb.jpg",
+                    Collections.emptySet(),
+                    genres // **Genre.FAMILY antages at eksistere eller vælg passende kategori**
             );
 
             // Persistér (gem) objekterne i databasen
             session.persist(user1);
             session.persist(adminUser);
-            session.persist(game1);
+            session.persist(game);
             session.persist(game2);
+
 
             // Commit transaktionen hvis alt er gået godt
             tx.commit();
